--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -11,14 +11,14 @@
       <div class="row">
         <div class="col-2">
           <div class="list-group list-group-flush text-center">
-              <a href="/" class="list-group-item darkmode">Index</a>
-              <a href="/productlist" class="list-group-item darkmode">Products</a>
-              <a href="/stock" class="list-group-item darkmode">Stocks</a>
-              <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
-              <a href="/user" class="list-group-item darkmode">Users</a>
-              <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-              <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">Dark Mode</label>
-              <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
+              <a href="/" class="list-group-item darkmode">首頁</a>
+              <a href="/productlist" class="list-group-item darkmode">貨品</a>
+              <a href="/stock" class="list-group-item darkmode">儲存位置</a>
+              <a href="/deliveryOrder" class="list-group-item darkmode">交貨單</a>
+              <a href="/user" class="list-group-item darkmode">用戶</a>
+              <a href="/recycleBin" class="list-group-item darkmode">回收箱</a>
+              <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">夜間模式</label>
+              <button type="submit" form="logout" class="list-group-item darkmode">登出</button>
           </div> 
           
           <form action="/user/logout" method="post" id="logout">
@@ -29,7 +29,7 @@
           <div class="row my-1">
             <div class="col">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/"  class="darkmode">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/"  class="darkmode">首頁</a></li>
                     <li class="breadcrumb-item active darkmode" aria-current="page">recycleBin</li>
                 </ol>
                 <button type="submit" form="rollback" class="">復原</button>    
@@ -78,10 +78,10 @@
               </div>
               <div class="row my-1 border-bottom border-primary bg-secondary-subtle">
                 <div class="col fw-bold fs-5 text-center">
-                  <label>Delivery Id</label>
+                  <label>送貨單號</label>
                 </div>
                 <div class="col fw-bold fs-5 text-center">
-                  <label>Company</label>
+                  <label>公司名稱</label>
                 </div>
                 <div class="col fw-bold fs-5 text-center">
                   <label>Type</label>
