--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -18,19 +18,19 @@
 
                 <div class="row m-1">
                     <div class="col-4">
-                        <label for="username">Username:</label>
+                        <label for="username">帳戶名稱:</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="username" name="username" class="form-control" placeholder="username">
+                        <input type="text" id="username" name="username" class="form-control" placeholder="帳戶名稱">
                     </div>
                 </div>
 
                 <div class="row m-1">
                     <div class="col-4">
-                        <label for="password">Password:</label>
+                        <label for="password">密碼:</label>
                     </div>
                     <div class="col-8">
-                        <input type="password" name="password" id="password" class="form-control" placeholder="password">
+                        <input type="password" name="password" id="password" class="form-control" placeholder="密碼">
                     </div>
                 </div>
 
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="row m-1">
-                    <input type="submit" value="Login" class="btn btn-primary">
+                    <input type="submit" value="登入" class="btn btn-primary">
                 </div>
             </form>
         </div>
