--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -13,7 +13,7 @@
         <div class="position-absolute top-50 start-50 translate-middle border border-primary bg-light">
             <form action="/user/login" method="post" >
                 <div class="row text-center">
-                    <label class="h1">Login</label>
+                    <label class="h1">登入帳戶</label>
                 </div>
 
                 <div class="row m-1">
